# metrics

./: .editorconfig  .gitignore  COPYRIGHT  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  clippy.toml  netlify.toml  release.toml  rust-toolchain.toml
.github/: ci.yml  dependabot.yml
ci/: azure-rustfmt.yml  (+3 more)
metrics/: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  Makefile.toml  README.md  RELEASES.md  release.toml
metrics-benchmark/: Cargo.toml
metrics-benchmark/src/: main.rs
metrics-core/: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
metrics-core/src/: key.rs  lib.rs  recorder.rs
metrics-exporter-composite/: Cargo.toml  README.md
metrics-exporter-composite/src/: composite_recorder.rs  lib.rs
metrics-exporter-dogstatsd/: CHANGELOG.md  Cargo.toml  README.md
metrics-exporter-dogstatsd/examples/: dogstatsd_idle_counter.rs  dogstatsd_synchronous.rs  synchronous.rs
metrics-exporter-dogstatsd/proptest-regressions/: writer.txt
metrics-exporter-dogstatsd/proptest-regressions/forwarder/: writer.txt
metrics-exporter-dogstatsd/src/: builder.rs  lib.rs  recorder.rs  state.rs  storage.rs  telemetry.rs  util.rs  writer.rs
metrics-exporter-dogstatsd/src/forwarder/: mod.rs  sync.rs
metrics-exporter-http/: CHANGELOG.md  Cargo.toml  README.md
metrics-exporter-http/src/: lib.rs
metrics-exporter-log/: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md
metrics-exporter-log/src/: lib.rs
metrics-exporter-opentelemetry/: CHANGELOG.md  Cargo.toml  README.md
metrics-exporter-opentelemetry/examples/: basic.rs  custom_histogram_bounds.rs
metrics-exporter-opentelemetry/src/: description.rs  lib.rs  metadata.rs  storage.rs
metrics-exporter-opentelemetry/tests/: integration_test.rs
metrics-exporter-prometheus/: CHANGELOG.md  Cargo.toml  README.md  build.rs
metrics-exporter-prometheus/examples/: exemplars.rs  native_histograms.rs  prometheus_push_gateway.rs  prometheus_remote_write.rs  prometheus_server.rs  prometheus_uds_server.rs
metrics-exporter-prometheus/proptest-regressions/: common.txt
metrics-exporter-prometheus/src/: builder.rs  common.rs  distribution.rs  formatting.rs  lib.rs  native_histogram.rs  protobuf.rs  recorder.rs  registry.rs  remote_write_proto.rs  render.rs
metrics-exporter-prometheus/src/exporter/: builder.rs  http_listener.rs  mod.rs  push_gateway.rs  remote_write.rs  remote_write_proto.rs  uds_listener.rs
metrics-exporter-prometheus/tests/: http_listener_integration_test.rs
metrics-exporter-tcp/: CHANGELOG.md  Cargo.toml  README.md  build.rs
metrics-exporter-tcp/examples/: tcp_client.rs  tcp_server.rs
metrics-exporter-tcp/proto/: event.proto
metrics-exporter-tcp/src/: lib.rs
metrics-facade/: Cargo.toml  README.md  build.rs
metrics-facade/examples/: basic.rs
metrics-facade/src/: lib.rs  macros.rs
metrics-macros/: CHANGELOG.md  Cargo.toml  README.md
metrics-macros/src/: lib.rs  tests.rs
metrics-observer/: CHANGELOG.md  Cargo.toml  README.md  build.rs
metrics-observer-json/: Cargo.toml  LICENSE  README.md
metrics-observer-json/src/: lib.rs
metrics-observer-prometheus/: CHANGELOG.md  Cargo.toml  README.md
metrics-observer-prometheus/src/: lib.rs
metrics-observer-text/: Cargo.toml  README.md
metrics-observer-text/src/: lib.rs
metrics-observer-yaml/: Cargo.toml  README.md
metrics-observer-yaml/src/: lib.rs
metrics-observer/proto/: event.proto
metrics-observer/src/: input.rs  main.rs  metrics.rs  selector.rs
metrics-recorder-prometheus/: CODE_OF_CONDUCT.md  Cargo.toml  README.md
metrics-recorder-prometheus/src/: lib.rs
metrics-recorder-text/: Cargo.toml  README.md
metrics-recorder-text/src/: lib.rs
metrics-runtime/: CHANGELOG.md  Cargo.toml  README.md
metrics-runtime/benches/: histogram.rs
metrics-runtime/examples/: benchmark.rs  facade.rs  stdbenchmark.rs
metrics-runtime/src/: builder.rs  common.rs  config.rs  control.rs  exporters.rs  lib.rs  observers.rs  receiver.rs  recorders.rs  scopes.rs  sink.rs
metrics-runtime/src/data/: counter.rs  gauge.rs  histogram.rs  snapshot.rs
metrics-runtime/src/registry/: metric.rs  mod.rs  scope.rs
metrics-tracing-context/: CHANGELOG.md  Cargo.toml  README.md
metrics-tracing-context/benches/: layer.rs  visit.rs
metrics-tracing-context/src/: label_filter.rs  lib.rs  tracing_integration.rs
metrics-tracing-context/tests/: integration.rs
metrics-util/: CHANGELOG.md  Cargo.toml  README.md
metrics-util/benches/: absolute.rs  bucket.rs  filter.rs  prefix.rs  registry.rs  router.rs  streaming_integers.rs
metrics-util/examples/: bucket-crusher.rs  histogram-fidelity.rs  segqueue-torture.rs
metrics-util/src/: bucket.rs  common.rs  debugging.rs  handle.rs  handles.rs  histogram.rs  key.rs  kind.rs  lib.rs  quantile.rs  recency.rs  recoverable.rs  registry.rs  streaming.rs  summary.rs  test_util.rs  tree.rs
metrics-util/src/layers/: absolute.rs  fanout.rs  filter.rs  mod.rs  prefix.rs  router.rs
metrics-util/src/registry/: mod.rs  recency.rs  registry.rs  storage.rs  storage_strategy.rs
metrics-util/src/storage/: histogram.rs  mod.rs  reservoir.rs  summary.rs
metrics-util/tests/streaming/: fuzz_target.rs
metrics/benches/: histogram.rs  key.rs  macros.rs
metrics/examples/: basic.rs  benchmark.rs  facade.rs  sizes.rs  stdbenchmark.rs
metrics/src/: atomics.rs  builder.rs  common.rs  config.rs  configuration.rs  control.rs  cow.rs  exporters.rs  handles.rs  helper.rs  identifier.rs  key.rs  label.rs  lib.rs  macros.rs  metadata.rs  receiver.rs  recorder.rs  recorders.rs  scopes.rs  sink.rs
metrics/src/data/: counter.rs  gauge.rs  histogram.rs  mod.rs  snapshot.rs
metrics/src/recorder/: cell.rs  errors.rs  mod.rs  noop.rs
metrics/src/registry/: metric.rs  scope.rs
metrics/tests/: macros.rs  macros_parsing.rs
metrics/tests/macros/: 01_basic.rs  01_trailing_comma.rs  02_metric_name.rs  02_metric_name.stderr  02_trailing_comma.rs  03_mod_aliasing.rs  04_customization.rs  04_named_args.rs
tooling/metrics-histogram-fidelity/: .gitignore  Cargo.toml
tooling/metrics-histogram-fidelity/src/: main.rs
(+20 files in other folders)
