[workspace]
members = [
  "metrics",
  "metrics-macros",
  "metrics-util",
  "metrics-benchmark",
  "metrics-exporter-tcp",
  "metrics-exporter-prometheus",
  "metrics-tracing-context",
]
exclude = ["metrics-observer"]

[patch.crates-io]
hyper = { git = "https://github.com/hyperium/hyper/", rev = "ed2b22a7f66899d338691552fbcb6c0f2f4e06b9" }

