[package]
name = "metrics-benchmark"
version = "0.1.1-alpha.5"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = { workspace = true }
publish = false

[dependencies]
getopts = { workspace = true }
hdrhistogram = { workspace = true }
log = { workspace = true }
metrics = { version = "^0.24", path = "../metrics" }
metrics-util = { version = "^0.20", path = "../metrics-util" }
portable-atomic = { workspace = true, features = ["fallback"] }
pretty_env_logger = { workspace = true }
quanta = { workspace = true }
