[package]
name = "metrics-exporter-dogstatsd"
version = "0.9.0"
edition = { workspace = true}
rust-version = "1.71.1"

description = "A metrics-compatible exporter for sending metrics to the Datadog Agent."
license = { workspace = true }
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/metrics-exporter-dogstatsd"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "dogstatsd", "Datadog"]

[dependencies]
bytes = { version = "1", default-features = false }
ryu = { version = "1", default-features = false }
itoa = { version = "1", default-features = false }
metrics = { version = "^0.24", path = "../metrics" }
metrics-util = { version = "^0.19", path = "../metrics-util" }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
rand_xoshiro = { version = "0.6", default-features = false }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
