[package]
name = "metrics-exporter-http"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

license = "MIT"

description = "metric exporter for serving metrics over HTTP"

homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics-exporter-http"
documentation = "https://docs.rs/metrics-exporter-http"

[dependencies]
metrics-core = { path = "../metrics-core", version = "^0.3" }
hyper = "^0.12"
log = "^0.4"
