[package]
name = "metrics-exporter-prometheus"
version = "0.15.3"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT"

description = "A metrics-compatible exporter for sending metrics to Prometheus."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics-exporter-prometheus"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "prometheus"]

[features]
default = ["http-listener", "push-gateway"]
async-runtime = ["tokio", "hyper-util/tokio"]
http-listener = ["async-runtime", "ipnet", "tracing", "_hyper-server"]
uds-listener = ["http-listener"]
push-gateway = ["async-runtime", "tracing", "_hyper-client"]
_hyper-server = ["http-body-util", "hyper/server", "hyper-util/server-auto"]
_hyper-client = [
    "http-body-util",
    "hyper/client",
    "hyper-util/client",
    "hyper-util/http1",
    "hyper-util/client-legacy",
    "hyper-rustls",
]

[dependencies]
metrics = { version = "^0.23", path = "../metrics" }
metrics-util = { version = "^0.17", path = "../metrics-util", default-features = false, features = [
    "recency",
    "registry",
    "summary",
] }
thiserror = { version = "1", default-features = false }
quanta = { version = "0.12", default-features = false }
indexmap = { version = "2.1", default-features = false, features = ["std"] }
base64 = { version = "0.22.0", default-features = false, features = ["std"] }

# Optional
hyper = { version = "1.1", features = ["server", "client"], optional = true }
hyper-util = { version = "0.1.3", features = [
    "tokio",
    "service",
    "client",
    "client-legacy",
    "http1",
], optional = true }
http-body-util = { version = "0.1.0", optional = true }
ipnet = { version = "2", optional = true }
tokio = { version = "1", features = [
    "rt",
    "net",
    "time",
    "rt-multi-thread",
], optional = true }
tracing = { version = "0.1.26", optional = true }
hyper-rustls = { version = "0.27.2", optional = true }

[dev-dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
proptest = "1"

[[example]]
name = "prometheus_push_gateway"
required-features = ["push-gateway"]

[[example]]
name = "prometheus_server"
required-features = ["http-listener"]

[[example]]
name = "prometheus_uds_server"
required-features = ["uds-listener"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
