[package]
name = "metrics-exporter-prometheus"
version = "0.15.3"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.70.0"

license = "MIT"

description = "A metrics-compatible exporter for sending metrics to Prometheus."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics-exporter-prometheus"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "prometheus"]

[features]
default = ["http-listener", "push-gateway"]
async-runtime = ["tokio", "hyper-util/tokio"]
http-listener = ["async-runtime", "ipnet", "tracing", "_hyper-server"]
uds-listener = ["http-listener"]
push-gateway = ["async-runtime", "tracing", "_hyper-client"]
_hyper-server = ["http-body-util", "hyper/server", "hyper-util/server-auto"]
_hyper-client = [
    "http-body-util",
    "hyper/client",
    "hyper-util/client",
    "hyper-util/http1",
    "hyper-util/client-legacy",
    "hyper-rustls",
]

[dependencies]
base64 = { workspace = true }
http-body-util = { workspace = true, optional = true }

# Optional
hyper = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
indexmap = { workspace = true }
ipnet = { workspace = true, optional = true }
metrics = { version = "^0.23", path = "../metrics" }
metrics-util = { version = "^0.17", path = "../metrics-util", default-features = false, features = [
    "recency",
    "registry",
    "summary",
] }
quanta = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[[example]]
name = "prometheus_push_gateway"
required-features = ["push-gateway"]

[[example]]
name = "prometheus_server"
required-features = ["http-listener"]

[[example]]
name = "prometheus_uds_server"
required-features = ["uds-listener"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
