[package]
name = "metrics-exporter-prometheus"
version = "0.18.1"
edition = "2018"
rust-version = { workspace = true }

description = "A metrics-compatible exporter for sending metrics to Prometheus."
license = { workspace = true }
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/metrics-exporter-prometheus"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "prometheus"]

[features]
default = ["http-listener", "push-gateway"]
async-runtime = ["tokio", "hyper-util/tokio"]
http-listener = ["async-runtime", "ipnet", "tracing", "_hyper-server"]
uds-listener = ["http-listener"]
push-gateway = ["_push-gateway-common", "hyper-rustls/aws-lc-rs"]
push-gateway-no-tls-provider = ["_push-gateway-common"]
protobuf = ["mime", "prost", "prost-types", "prost-build"]
_hyper-server = ["http-body-util", "hyper/server", "hyper-util/server-auto"]
_push-gateway-common = [
     "async-runtime",
     "rustls",
     "tracing",
     "_hyper-client",
]
_hyper-client = [
    "http-body-util",
    "hyper/client",
    "hyper-util/client",
    "hyper-util/http1",
    "hyper-util/client-legacy",
    "hyper-rustls",
]

[dependencies]
base64 = { workspace = true }
quanta = { workspace = true }
thiserror = { workspace = true }

# Optional
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-rustls = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
indexmap = { workspace = true }
ipnet = { workspace = true, optional = true }
metrics = { version = "^0.24", path = "../metrics" }
metrics-util = { version = "^0.20", path = "../metrics-util", default-features = false, features = [
    "recency",
    "registry",
    "storage",
] }
rustls = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }

# Protobuf support
mime = { version = "0.3", optional = true }
prost = { workspace = true, optional = true }
prost-types = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }

[build-dependencies]
prost-build = { workspace = true, optional = true }

[[example]]
name = "native_histograms"
required-features = ["http-listener", "protobuf"]

[[example]]
name = "prometheus_push_gateway"
required-features = ["push-gateway"]

[[example]]
name = "prometheus_server"
required-features = ["http-listener"]

[[example]]
name = "prometheus_uds_server"
required-features = ["uds-listener"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
