[package]
name = "metrics-exporter-tcp"
version = "0.7.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.56.1"

license = "MIT"

description = "A metrics-compatible exporter that outputs metrics to clients over TCP."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics-exporter-tcp"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "tcp"]

[dependencies]
metrics = { version = "0.20", path = "../metrics" }
bytes = { version = "1", default-features = false }
crossbeam-channel = { version = "0.5", default-features = false, features = ["std"] }
prost = { version = "0.11", default-features = false }
prost-types = { version = "0.11", default-features = false, features = ["std"] }
mio = { version = "0.8", default-features = false, features = ["os-poll", "net"] }
tracing = { version = "0.1", default-features = false, features = ["attributes"] }

[build-dependencies]
prost-build = "0.11"

[dev-dependencies]
quanta = "0.10.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
