[package]
name = "metrics-exporter-tcp"
version = "0.10.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"
rust-version = "1.71.1"

license = "MIT"

description = "A metrics-compatible exporter that outputs metrics to clients over TCP."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics-exporter-tcp"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "tcp"]

[dependencies]
bytes = { workspace = true }
crossbeam-channel = { workspace = true, features = ["std"] }
metrics = { version = "^0.23", path = "../metrics" }
mio = { workspace = true, features = ["os-poll", "net"] }
prost = { workspace = true }
prost-types = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
home = { workspace = true }
prost-build = { workspace = true }

[dev-dependencies]
quanta = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
