[package]
name = "metrics-exporter-tcp"
version = "0.11.1"
edition = "2018"
rust-version = { workspace = true }

description = "A metrics-compatible exporter that outputs metrics to clients over TCP."
license = { workspace = true }
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/metrics-exporter-tcp"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "telemetry", "tcp"]

[dependencies]
bytes = { workspace = true }
crossbeam-channel = { workspace = true, features = ["std"] }
metrics = { version = "^0.24", path = "../metrics" }
mio = { workspace = true, features = ["os-poll", "net"] }
prost = { workspace = true }
prost-types = { workspace = true, features = ["std"] }
tracing = { workspace = true, features = ["attributes"] }

[build-dependencies]
prost-build = { workspace = true }

[dev-dependencies]
quanta = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt"] }
