[package]
name = "metrics-facade"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
license = "MIT"
edition = "2018"
repository = "https://github.com/metrics-rs/metrics-facade"
documentation = "https://docs.rs/metrics-facade"
description = """
A lightweight metrics facade for Rust
"""
categories = ["development-tools::debugging"]
readme = "README.md"
keywords = ["metrics", "facade"]
build = "build.rs"

[dependencies]
metrics-core = { path = "../metrics-core", version = "^0.4" }

[dev-dependencies]
log = "^0.4"

[package.metadata.docs.rs]
features = ["std"]

[features]
std = []
