[package]
name = "metrics-macros"
version = "0.4.1"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

license = "MIT"

description = "Macros for the metrics crate."
homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics"
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "facade", "macros"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", default-features = false, features = ["derive", "parsing", "printing", "proc-macro"] }
quote = { version = "1", default-features = false }
proc-macro2 = { version = "1", default-features = false, features = ["proc-macro"] }

[dev-dependencies]
syn = { version = "1", features = ["full"] }
