[package]
name = "metrics-observer"
version = "0.5.0"
edition = "2018"
rust-version = "1.74.0"

description = "Text-based UI for metrics-exporter-tcp."
license = { workspace = true }
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
repository = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/metrics"
readme = "README.md"

categories = ["development-tools::debugging"]
keywords = ["metrics", "facade", "macros"]

[dependencies]
bytes = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
crossbeam-channel = { workspace = true, features = ["std"] }
metrics = { version = "^0.24", path = "../metrics", default-features = false }
metrics-util = { version = "^0.19", path = "../metrics-util", default-features = false, features = ["storage"] }
prost = { workspace = true }
prost-types = { workspace = true }
ratatui = { workspace = true, features = ["crossterm"] }

[build-dependencies]
prost-build = { workspace = true }
