[package]
name = "metrics-recorder-text"
version = "0.1.0"
authors = ["Toby Lawrence <toby@nuclearfurnace.com>"]
edition = "2018"

license = "MIT"

description = "metric recorder for hierarchical, text-based output"

homepage = "https://github.com/metrics-rs/metrics"
repository = "https://github.com/metrics-rs/metrics-recorder-text"
documentation = "https://docs.rs/metrics-recorder-text"

[dependencies]
metrics-core = { path = "../metrics-core", version = "^0.3" }
metrics-util = { path = "../metrics-util", version = "^0.1" }
hdrhistogram = "^6.1"
